fix idea